--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,20 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body, .root {
+  width: 100%;
+  height: 100%;
+}
+
+.root {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
