--- a/src/index.scss
+++ b/src/index.scss
@@ -4,12 +4,22 @@
   box-sizing: border-box;
 }
 
-html, body, .root {
-  width: 100%;
-  height: 100%;
+html {
+  font-size: 8px;
 }
 
-.root {
+html, body {
+  width: 100vw;
+  height: 100vh;
+}
+
+body > * {
+  font-size: 2rem;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
