--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,7 +2,11 @@ header, footer {
   height: 6rem;
 }
 
-
 main {
   background-color: hotpink;
+}
+
+.data-box {
+  border-radius: 1rem;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.29);
 }
