--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,12 +1,62 @@
 header, footer {
   height: 6rem;
+  z-index: 2;
+}
+
+header {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  border-bottom: #e9e9e9;
+}
+
+footer {
+  box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.1);
+  border-top: #e9e9e9;
 }
 
 main {
-  background-color: hotpink;
+  overflow-y: hidden;
+  background: hotpink;
+}
+
+.box-stack {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  padding: 4rem 3rem;
+  grid-template-columns: repeat(3, 30rem);
+  grid-template-rows: auto;
+  grid-gap: 4rem 6rem;
+  justify-content: center;
+  overflow-y: scroll;
+  background-color: #f5f5f5; 
 }
 
 .data-box {
+  width: 30rem;
+  height: 40rem;
   border-radius: 1rem;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.29);
+  background-color: #ffffff;
+  
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #999; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #666; 
 }
