--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -15,10 +15,10 @@ footer {
 
 main {
   overflow-y: hidden;
-  background: hotpink;
 }
 
 .box-stack {
+  position: relative;
   display: grid;
   width: 100%;
   height: 100%;
@@ -28,7 +28,43 @@ main {
   grid-gap: 4rem 6rem;
   justify-content: center;
   overflow-y: scroll;
-  background-color: #f5f5f5; 
+  background-color: #f5f5f5;
+
+    .round-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 6rem;
+      height: 6rem;
+      border: 1px solid #d1d1d1;
+      background-color: rgba(87, 170, 170, 0.322);
+      border-radius: 50%;
+      font-size: 2.6rem;
+      color: rgba(22, 22, 22, 0.6);
+      cursor: pointer;
+      transition: background-color linear 250ms;
+    }
+
+    .add-new-button {
+      position: fixed;
+      top: 12rem;
+      right: 12rem;;
+    }
+
+    .more-button {
+      position: fixed;
+      bottom: 12rem;
+      right: 12rem;;
+    }
+
+    .more-button.button-disabled {
+      background-color: rgba(148, 148, 148, 0.322);
+      color: rgba(110, 110, 110, 0.6);
+    }
+
+    .round-button:not(.button-disabled):hover {
+      background-color: rgba(7, 161, 161, 0.582);
+    }
 }
 
 .data-box {
@@ -113,7 +149,7 @@ main {
       font-weight: 600;
       margin: 2.4rem auto 1rem auto;
       cursor: pointer;
-      transition: transform linear 250ms;
+      transition: transform linear 150ms;
     }
 
     .db-book:hover {
