--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,8 +13,21 @@ footer {
   border-top: #e9e9e9;
 }
 
-main {
-  overflow-y: hidden;
+.modal-screen {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: rgba(138, 138, 138, 0.322);
+  z-index: 30;
+  backdrop-filter: blur(4px);
+}
+
+.modal-active {
+  display: block;
 }
 
 .box-stack {
@@ -29,42 +42,45 @@ main {
   justify-content: center;
   overflow-y: scroll;
   background-color: #f5f5f5;
-
-    .round-button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 6rem;
-      height: 6rem;
-      border: 1px solid #d1d1d1;
-      background-color: rgba(87, 170, 170, 0.322);
-      border-radius: 50%;
-      font-size: 2.6rem;
-      color: rgba(22, 22, 22, 0.6);
-      cursor: pointer;
-      transition: background-color linear 250ms;
-    }
-
+  z-index: 10;
+  
     .add-new-button {
       position: fixed;
       top: 12rem;
       right: 12rem;;
+      z-index: 11;
     }
 
     .more-button {
       position: fixed;
       bottom: 12rem;
-      right: 12rem;;
+      right: 12rem;
+      z-index: 11;
     }
 
     .more-button.button-disabled {
       background-color: rgba(148, 148, 148, 0.322);
       color: rgba(110, 110, 110, 0.6);
     }
+}
 
-    .round-button:not(.button-disabled):hover {
-      background-color: rgba(7, 161, 161, 0.582);
-    }
+.round-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 6rem;
+  height: 6rem;
+  border: 1px solid #d1d1d1;
+  background-color: rgba(87, 170, 170, 0.322);
+  border-radius: 50%;
+  font-size: 2.6rem;
+  color: rgba(22, 22, 22, 0.6);
+  cursor: pointer;
+  transition: background-color linear 250ms;
+}
+
+.round-button:not(.button-disabled):hover {
+  background-color: rgba(7, 161, 161, 0.582);
 }
 
 .data-box {
@@ -165,6 +181,62 @@ main {
 
 .data-box:hover {
   box-shadow: 0 4px 8px 0 rgba(6, 105, 197, 0.6);
+}
+
+.hytta-add-form {
+  position: relative;
+  width: 75rem;
+  height: 90rem;
+  top: 50%;
+  left: 50%;
+  border: 2px solid rgba(6, 105, 197, 0.2);
+  transform: translate(-50%, -60%);
+  border-radius: 1rem;
+  background-color: #ffffff;
+  z-index: 31;
+  box-shadow: 0 4px 8px 0 rgba(6, 105, 197, 0.6);
+  padding: 2rem;
+
+  form {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-rows: 30rem repeat(3, 6rem) 20rem 10rem;
+    grid-gap: 1rem;
+    width: 100%;
+    height: 100%;
+    
+    & > * {
+      font-size: 2.6rem;
+      color: #333;
+      font-family: sans-serif;
+    }
+
+    .image-drop {
+      height: 30rem;
+      width: 30rem;
+      background-color: #3d3d3d;
+    }
+
+    input {
+      width: 80%;
+      height: 6rem;
+      padding: 0.5rem 1rem;
+    }
+
+    textarea {
+      width: 80%;
+      height: 18rem;
+      resize: none;
+      padding: 1rem;
+    }
+
+    button {
+      justify-self: end;
+      height: 10rem;
+      width: 10rem;
+    }
+  }
 }
 
 /* width */
