--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -15,19 +15,21 @@ footer {
 
 .modal-screen {
   position: absolute;
-  display: none;
+  opacity: 0;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   text-align: center;
-  background-color: rgba(138, 138, 138, 0.322);
-  z-index: 30;
+  background-color: rgba(165, 165, 165, 0.250);
+  z-index: -1;
   backdrop-filter: blur(4px);
+  transition: opacity 200ms ease-in-out;
 }
 
 .modal-active {
-  display: block;
+  opacity: 1;
+  z-index: 30;
 }
 
 .box-stack {
