--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -185,6 +185,22 @@ footer {
   box-shadow: 0 4px 8px 0 rgba(6, 105, 197, 0.6);
 }
 
+.toast-message {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  height: 6rem;
+  width: 60%;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.4;
+  font-weight: 600;
+  color: #111111;
+  background-color: rgba(130, 195, 0, 0.9);
+  border: 6px;
+}
+
 .hytta-add-form {
   position: relative;
   width: 75rem;
