--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,11 +1,17 @@
 header, footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 6rem;
+  font-family: Montserrat, sans-serif;
   z-index: 2;
+  letter-spacing: 3px;
 }
 
 header {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   border-bottom: #e9e9e9;
+  font-size: 2.8rem;
 }
 
 footer {
@@ -116,12 +122,12 @@ footer {
         top: 1.8rem;
         right: 2rem;
         border-radius: 4px;
-        color: rgb(51, 51, 51);
-        background-color: #d6d6d6de;
+        color: rgb(11, 22, 59);
+        background-color: #c2e3ffde;
         text-align: center;
         line-height: 2rem;
         font-size: 2rem;
-        font-weight: 500;
+        font-weight: 600;
       }
     }
 
@@ -178,6 +184,7 @@ footer {
       margin: 2.6rem;
       text-align: justify;
       font-size: 1.8rem;
+      font-weight: 300;
     }
 }
 
