--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -192,6 +192,10 @@ footer {
   box-shadow: 0 4px 8px 0 rgba(6, 105, 197, 0.6);
 }
 
+.new-item {
+  box-shadow: 0 0 18px 0 rgba(57, 138, 3, 0.726);
+}
+
 .toast-message {
   bottom: 0;
   left: 0;
