--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -35,6 +35,37 @@ header {
       }
     }
   }
+
+  .header-toolbar {
+    display: grid;
+    align-items: center;
+    justify-content: space-between;
+    grid-template-columns: 1fr 5rem;
+    padding: 0 6rem;;
+  }
+
+  .searchbar {
+    max-width: 80rem;
+    height: 6rem;
+    font-size: 2.2rem;
+    padding: 0 1rem;
+    color: rgba(0, 0, 0, 0.8);
+    border-radius: 4px;
+    border: 1px solid #e1e1e1;
+    font-family: inherit;
+  }
+
+  .count-badge {
+    display: grid;
+    place-items: center;
+    font-size: 2.6rem;
+    line-height: 2.6rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(128, 180, 240, 0.6);
+  }
 }
 
 footer {
